# LeviLaunchroid

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  settings.gradle
.github/workflows/: android.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/dlopenglobal/: CMakeLists.txt
app/src/main/cpp/dlopenglobal/src/: android_linker_ns.cpp  android_linker_ns.h  dlopenglobal.cpp
app/src/main/res/drawable/: bg_abi_arm64_v8a.xml  bg_abi_armeabi_v7a.xml  bg_abi_default.xml  bg_abi_x86.xml  (+12 more)
app/src/main/res/drawable-night/: card_background.xml  card_background_small.xml
docs/api/: config.md  hook.md  input.md  memory-hook-macros.md  mod.md  patch.md  types-and-macros.md
docs/guide/: developer.md
docs/zh-CN/api/: config.md  hook.md  input.md  memory-hook-macros.md  mod.md  patch.md  types-and-macros.md
docs/zh-CN/guide/: developer.md
examples/full-cpp-mod/: CMakeLists.txt  README.md
examples/full-cpp-mod/src/: ExampleConfig.hpp  FullCppMod.cpp  GenerateConfig.cpp
examples/mod-menu-api/: CMakeLists.txt  build.ps1
examples/mod-menu-api/manifests/c-lifecycle/: manifest.json
examples/mod-menu-api/manifests/dlsym-constructor/: manifest.json
examples/mod-menu-api/src/: c_lifecycle_mod.c  cpp_lifecycle_mod.cpp  dlsym_constructor_mod.cpp
fmod/: build.gradle.kts
gradle/: libs.versions.toml
httpclient/: build.gradle.kts
microsoft/xal/: build.gradle.kts
microsoft/xbox/: build.gradle.kts
minecraft/: build.gradle.kts
preloader/: build.gradle
(+106 files in other folders)
